--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,26 @@
-apply plugin: 'com.android.application'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-android {
-    compileSdkVersion 27
-    buildToolsVersion "27.1.1"
-
-    defaultConfig {
-        applicationId "com.lfast.application"
-        minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+buildscript {
+    repositories {
+        jcenter()
+		google()
+		maven();
+		mavenCentral():
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.+'
+		classpath 'com.google.gms:google-services:3.1.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-	
-    compile 'com.android.support:appcompat-v7:25.3.0'
-	compile 'com.android.support:design:25.3.0'
-	compile 'com.android.support.constraint:constraint-layout:1.0.2'
-	compile 'com.android.support:recyclerview-v7:25.3.0'
-	compile 'com.android.support:animated-vector-drawable:25.3.0'
-	compile 'com.android.support:cardview-v7:25.3.0'
-	
-	
-	compile 'com.google.firebase:firebase-auth:11.0.4'
-	// compile 'com.google.android.gms:play-services-auth-api-phone:11.0.4'
-	// compile 'com.google.firebase:firebase-database:11.0.4'
-	// compile 'com.google.firebase:firebase-messaging:11.0.4'
-	
-	
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-	
+allprojects {
+    repositories {
+        jcenter()
+		google()
+		maven();
+		mavenCentral():
+    }
 }
-
-apply plugin: 'com.google.gms.google-services'
