--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+
+
+#PART 1
+
+
+
+
+
 buildscript {
     repositories {
         jcenter()
